Calculator is green and parts of code are in place

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
+	<title>repl.it - And Build A Calculator and learn about the DOM</title>
 	<link href="main.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<script src="main.js">
 	</script>
 </head>
+<body>
+	<h1>Build a Calculator and Practice manipulating the DOM - Document Object Model</h1>
+
+	<h2>This is painful but fun and rewarding</h2>
+	
+<div class = "box green" ></div>
+
+
+</body>
+</html>
